fix: css for forms on mobile screens

--- a/src/components/styles/Login.module.scss
+++ b/src/components/styles/Login.module.scss
@@ -8,8 +8,11 @@
 .form {
   display: flex;
   flex-direction: column;
-  width: 400px;
   margin: 20px 0;
+
+  @media (min-width: 768px) {
+    min-width: 400px;
+  }
 }
 
 .input {
